<resources>
    <string name="app_name">WeatherApp</string>
    <string name="click_me">Click me!</string>
    <string name="city">City</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>